# GeeCe

./: CMakeLists.txt  Makefile  README.md
include/: heap.h  mark_and_sweep.h  object.h  root_table.h
src/: heap.c  mark_and_sweep.c  object.c  root_table.c
tests/: test_root_table.c
